Deleted SpringFXMLLanzador. Created JavaFXPApp to separate JavaFX and Spring. LogInControlador finished. Registro Controlador cause an error when you try to register a new account. Still looking to fix it.