@@ -153,16 +153,15 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
+                <version>0.0.8</version> <configuration>
                     <mainClass>es.etg.dam.tfg.programa.App</mainClass>
                     <options>
-                        <option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
-                        <option>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</option>
-                        <option>--add-opens=java.base/java.util=ALL-UNNAMED</option>
+                        <option>--module-path=${settings.localRepository}/org/openjfx/javafx-controls/22</option>
+                        <option>--add-modules=javafx.controls,javafx.fxml</option>
                     </options>
                 </configuration>
-            </plugin>            
+            </plugin>
+                       
         </plugins>
     </build>
 </project>
